# news-service

./: .gitignore  README.md  docker-compose.yml
nclient/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
nclient/app/: globals.css  layout.js  not-found.js  page.js
nclient/app/[slug]/: page.js  summary-preview.js
nclient/app/components/: app-navbar.js  leaflet-event-listener.js  leaflet-map.js  leaflet-municipality.js  leaflet-popup.js
nclient/app/utility/: emojis.js  queries.js  timeAgoInit.js
nscraper/: Dockerfile  pyproject.toml  requirements.txt  run.sh  run_instant.py  run_loop.py
nscraper/src/nscraper/: constants.py
nscraper/src/nscraper/core/: consumer.py  dtos.py  models.py  scraper.py
nscraper/src/nscraper/utils/: chatgpt.py  discord.py  firestore.py  logger.py  preprocessor.py
nscraper/tests/: rss.xml  rss_alt.xml  test_consumer.py  test_scraper.py
